# panfiguration

./: .gitignore  CHANGELOG.md  LICENSE  README.md  panfiguration.cabal
.github/workflows/: haskell.yml
src/: Panfiguration.hs
src/Panfiguration/: Case.hs  Core.hs  FromParam.hs
tests/: test.hs
