cabal-version:      2.4
name:               panfiguration
version:            0.0

-- A short (one-line) description of the package.
synopsis:           Merge environment variables and command line options generically

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Fumiaki Kinoshita
maintainer:         fumiaki.kinoshita@herp.co.jp

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md, README.md

library
    exposed-modules:
        Panfiguration
        Panfiguration.FromParam
        Panfiguration.Case
        Panfiguration.Core
    build-depends:    base >=4.10 && <5
        , barbies
        , barbies-th
        , bytestring
        , network
        , optparse-applicative
        , split
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
      tests
  build-depends:
      base >=4.7 && <5
    , barbies-th
    , panfiguration
  default-language: Haskell2010